--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
+    "ats-lib-ntwk-common": "file:../ATS-lib-ntwk-common",
     "axios": "^1.3.6"
   }
 }
