--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,2 @@
-# In case of scripbox packages, scope is going to be scripbox
-@atsorganization:registry = https://npm.pkg.github.com
-
-_authToken = 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
-always-auth = true
+@atsorganization:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
