--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ats-lib-clickadu",
+  "name": "@atsorganization/ats-lib-clickadu",
   "version": "1.0.0",
   "description": "Library connection API AdNetwork clickadu",
   "main": "lib/index.js",
@@ -46,7 +46,6 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
-    "ats-lib-ntwk-common": "https://github.com/ATSOrganization/ATS-lib-ntwk-common",
-    "ats-lib-logger": "https://github.com/ATSOrganization/ATS-lib-logger"
+    "@atsorganization/ats-lib-ntwk-common": "^1.0.0"
   }
 }
