--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
-    "@atsorganization/ats-lib-ntwk-common": "^1.0.0"
+    "@atsorganization/ats-lib-ntwk-common": "^1.0.0",
+    "@atsorganization/ats-lib-logger": "^1.0.0"
   }
 }
