--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@atsorganization/ats-lib-adxad",
-  "version": "1.0.6",
-  "description": "Library connection API AdNetwork adxad",
+  "name": "@atsorganization/ats-lib-trendingbid",
+  "version": "1.0.0",
+  "description": "Library connection API AdNetwork trendingbid",
   "main": "lib/index.js",
-  "repository": "https://github.com/ATSOrganization/ATS-lib-adxad",
+  "repository": "https://github.com/ATSOrganization/ATS-lib-trendingbid",
   "directories": {
     "lib": "lib",
     "test": "test"
@@ -45,8 +45,11 @@
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
-    "axios": "^1.3.6",
+    "@atsorganization/ats-lib-logger": "^1.0.0",
     "@atsorganization/ats-lib-ntwk-common": "^1.0.0",
-    "@atsorganization/ats-lib-logger": "^1.0.0"
+    "axios": "^1.3.6",
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
+    "qs": "^6.11.2"
   }
 }
