--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "sourceMap": true
+    "sourceMap": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
